--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
             "url": "https://github.com/hoperyy"
         }
     ],
+    "engines": {
+        "node": ">=8.9.1"
+    },
     "name": "bio-scaffold-vue",
-    "version": "1.0.1"
+    "version": "1.0.2"
 }
