bugfix: only pages/ can be created html files; default support destruct

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
+    "plugins": [
+        "transform-object-assign",
+        [
+            "transform-object-rest-spread",
+            {
+                "useBuiltIns": true
+            }
+        ]
+    ],
     "presets": [
         "env"
     ]
