--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "babel-loader": "^7.1.2",
         "babel-plugin-transform-object-assign": "6.22.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "bio-helper": "^1.0.0",
         "css-loader": "^0.28.7",
@@ -46,5 +47,5 @@
         "node": ">=8.9.1"
     },
     "name": "bio-scaffold-vue",
-    "version": "1.0.5"
+    "version": "1.0.6"
 }
