--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "vue-template-compiler": "^2.5.9",
         "webpack": "^3.10.0",
         "webpack-dev-server": "^2.9.7",
-        "webpack-merge": "^4.1.1"
+        "webpack-merge": "^4.1.1",
+        "write-file-webpack-plugin": "^4.2.0"
     },
     "description": "A bio scaffold",
     "license": "ISC",
