publish v1.0.14: support decorators and static property

--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,11 @@
             {
                 "useBuiltIns": true
             }
-        ]
+        ],
+        "transform-decorators-legacy"
     ],
     "presets": [
-        "env"
+        "env",
+        "stage-0"
     ]
 }
