--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
         "autoprefixer": "^7.2.2",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-object-assign": "6.22.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-stage-0": "^6.24.1",
         "bio-helper": "^1.0.0",
         "css-loader": "^0.28.7",
         "extract-text-webpack-plugin": "^3.0.2",
@@ -48,5 +50,5 @@
         "node": ">=8.9.1"
     },
     "name": "bio-scaffold-vue",
-    "version": "1.0.10"
+    "version": "1.0.11"
 }
