remove .babelrc in template

--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     "scripts": {
         "prepublish": "cp ./package.json ./.package.json && cp ./package-lock.json ./.package-lock.json"
     },
-    "name": "bio-scaffold-vue-test",
+    "name": "bio-scaffold-vue",
     "version": "1.0.14"
 }
