--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
         "babel-preset-stage-0": "^6.24.1",
         "bio-helper": "^1.0.0",
         "colors": "^1.3.2",
-        "css-loader": "^0.28.7",
-        "extract-text-webpack-plugin": "^3.0.2",
+        "css-loader": "^2.1.1",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "file-loader": "0.11.2",
         "fs-extra": "^4.0.3",
         "gulp": "^3.9.1",
@@ -34,21 +34,22 @@
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
         "is-relative": "^1.0.0",
-        "less": "^2.7.3",
-        "less-loader": "^4.0.5",
+        "less": "^3.9.0",
+        "less-loader": "^4.1.0",
         "on-build-webpack": "^0.1.0",
-        "open": "0.0.5",
-        "postcss-loader": "^2.0.9",
+        "postcss-loader": "^3.0.0",
         "string-replace-webpack-plugin": "^0.1.3",
-        "style-loader": "^0.19.0",
-        "url-loader": "^0.6.2",
-        "vue": "^2.5.9",
-        "vue-loader": "^13.5.0",
-        "vue-router": "^3.0.1",
-        "vue-template-compiler": "^2.5.9",
-        "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.9.7",
-        "webpack-merge": "^4.1.1",
+        "style-loader": "^0.23.1",
+        "uglifyjs-webpack-plugin": "^2.1.2",
+        "url-loader": "^1.1.2",
+        "vue": "^2.6.10",
+        "vue-loader": "^15.7.0",
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.6.10",
+        "webpack": "^4.29.6",
+        "webpack-bundle-analyzer": "^3.1.0",
+        "webpack-dev-server": "^3.2.1",
+        "webpack-merge": "^4.2.1",
         "write-file-webpack-plugin": "^4.2.0"
     },
     "version": "1.0.18"
