--- a/.babelrc
+++ b/.babelrc
@@ -9,11 +9,18 @@
             {
                 "useBuiltIns": true
             }
+        ],
+        [
+            "transform-react-jsx",
+            {
+                "pragma": "h"
+            }
         ]
     ],
     "presets": [
         "env",
         "es2015",
-        "stage-2"
+        "stage-2",
+        "react"
     ]
 }
