--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-object-assign": "6.22.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-plugin-transform-vue-jsx": "^3.7.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "bio-helper": "^1.0.0",
         "cheerio": "^1.0.0-rc.2",
