--- a/project-template/react/package.json
+++ b/project-template/react/package.json
@@ -10,8 +10,12 @@
     "build-pre": "bio run build-pre -n",
     "build-prod": "bio run build-prod -n"
   },
-  "devDependencies": {
-    "bio-cli": "^1.0.3"
+  "dependencies": {
+    "bio-cli": "^1.0.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "bio-scaffold": "bio-scaffold"
 }
